src/test/rustdoc-ui/doc-attr.stderr
error: unknown `doc` attribute `as_ptr`
  --> $DIR/doc-attr.rs:8:7
   |
LL | #[doc(as_ptr)]
   |       ^^^^^^
   |
note: the lint level is defined here
  --> $DIR/doc-attr.rs:2:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: unknown `doc` attribute `as_ptr`
  --> $DIR/doc-attr.rs:4:8
   |
LL | #![doc(as_ptr)]
   |        ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!

error: aborting due to 2 previous errors

